[gd_scene load_steps=16 format=3 uid="uid://drakbuggxc807"]

[ext_resource type="Script" uid="uid://d3f5wy4c6t7e" path="res://Entities/Scenes/Rooms/mainScene.gd" id="1_38ype"]
[ext_resource type="PackedScene" uid="uid://bvkcos12mjaxr" path="res://Entities/Board/boardManager.tscn" id="2_dtwfu"]
[ext_resource type="PackedScene" uid="uid://cobtvt8orra4u" path="res://Entities/Hand/handManager.tscn" id="3_4ufd4"]
[ext_resource type="PackedScene" uid="uid://cgbeiher77acw" path="res://Entities/Mouse/mouse.tscn" id="4_71i26"]
[ext_resource type="PackedScene" uid="uid://ysw1vyd7dj33" path="res://Entities/Decks/deck.tscn" id="5_oy8qg"]
[ext_resource type="PackedScene" uid="uid://crwftl3w4v8qo" path="res://Entities/BattleManagers/Manager/battleManager.tscn" id="6_gutgw"]
[ext_resource type="Shader" uid="uid://bebd7eu5owxt0" path="res://shaders/rainbow_border.gdshader" id="7_jnkey"]
[ext_resource type="PackedScene" uid="uid://k4v4s2gtpl8t" path="res://Entities/Decks/DeckDiscarded/deckDiscarded.tscn" id="8_n3i5p"]
[ext_resource type="PackedScene" uid="uid://b40yamh1qyeup" path="res://Entities/SFXmanager/SFXmanager.tscn" id="9_ruk0k"]
[ext_resource type="PackedScene" uid="uid://d2cuqmk8uafxv" path="res://Entities/BattleManagers/Simulator/battleSimulator.tscn" id="10_f1fpf"]
[ext_resource type="PackedScene" uid="uid://cvhipaaqpctj6" path="res://Entities/BattleManagers/Animator/battleANIMATOR.tscn" id="11_rn60a"]
[ext_resource type="PackedScene" uid="uid://cngb63kfm4jub" path="res://Entities/Scenes/UI_manager.tscn" id="12_b1o7s"]
[ext_resource type="PackedScene" uid="uid://ba8nvcho336y8" path="res://Entities/Globals/enemy_face.tscn" id="13_dtwfu"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4b75m"]
shader = ExtResource("7_jnkey")
shader_parameter/brightness = 0.865
shader_parameter/contrast = 0.655
shader_parameter/alpha_mult = 4.98
shader_parameter/border_size = 0.505
shader_parameter/speed = 0.03
shader_parameter/is_active = true

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_qxria"]

[node name="Main" type="Node2D"]
script = ExtResource("1_38ype")

[node name="BoardManager" parent="." instance=ExtResource("2_dtwfu")]
position = Vector2(-253, -450)

[node name="handManager" parent="." instance=ExtResource("3_4ufd4")]
position = Vector2(-274, 1231)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(439, 331)
zoom = Vector2(0.445, 0.445)

[node name="Mouse" parent="." instance=ExtResource("4_71i26")]
position = Vector2(-264, 452)

[node name="Deck" parent="." instance=ExtResource("5_oy8qg")]
position = Vector2(2397, 0)

[node name="BattleManager" parent="." instance=ExtResource("6_gutgw")]
position = Vector2(-1084, -450)
scale = Vector2(0.89, 0.89)

[node name="TextureRect" type="NinePatchRect" parent="."]
visible = false
show_behind_parent = true
material = SubResource("ShaderMaterial_4b75m")
offset_left = -364.0
offset_top = -568.0
offset_right = 1214.0
offset_bottom = 1016.0
texture = SubResource("CompressedTexture2D_qxria")
draw_center = false

[node name="DeckDiscarded" parent="." instance=ExtResource("8_n3i5p")]
position = Vector2(-2822, 233)

[node name="sfxManager" parent="." instance=ExtResource("9_ruk0k")]
position = Vector2(364, 233)

[node name="BattleSimulator" parent="." instance=ExtResource("10_f1fpf")]

[node name="BattleAnimator" parent="." instance=ExtResource("11_rn60a")]

[node name="UiManager" parent="." instance=ExtResource("12_b1o7s")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1687.0
offset_top = 1080.0
offset_right = 1828.0
offset_bottom = 1126.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(4.235, 4.235)

[node name="EnemyFace" parent="." instance=ExtResource("13_dtwfu")]
